Fix Filters alignment

--- a/src/styles/pages/product-listing.scss
+++ b/src/styles/pages/product-listing.scss
@@ -45,6 +45,7 @@
     grid-row: span 2;
     grid-column: 1 / span 3;
     align-self: start;
+    padding-top: var(--space-1);
   }
 }
 
